# anolis-provider-ezo

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  output.txt  vcpkg.json
.github/workflows/: ci.yml  docs.yml  release.yml
config/mixed-bus/: COMMANDS.md  README.md  anolis-runtime.mixed-baseline.windows.mock.yaml  anolis-runtime.mixed-baseline.yaml  anolis-runtime.mixed-lab.yaml  anolis-runtime.mixed.win.mock.yaml  anolis-runtime.mixed.yaml  provider-bread.mock.yaml  provider-bread.yaml  provider-ezo.baseline.mock.yaml  provider-ezo.yaml
config/phase7/: README.md  anolis-runtime.mixed-baseline.yaml  anolis-runtime.mixed-conflict.yaml  provider-bread.baseline.yaml  provider-ezo.baseline.yaml  provider-ezo.conflict-shadow.yaml
docs/: Doxyfile  README.md  architecture-and-bus-safety.md  device-contracts-v1.md  index.md  mixed-bus-validation-evidence-template.md  mixed-bus-validation.md  runtime-ownership-validation-inputs.md
docs/contracts/: ezo-v1-draft-contracts.md
docs/cross-repo/: phase-07-mixed-bus-validation.md  phase-07-validation-evidence-template.md
scripts/phase7/: assert_runtime_conflict_rejected.sh  check_mixed_bus_http.sh
src/config/: provider_config.hpp
src/core/: handlers.cpp  handlers.hpp  health.cpp  health.hpp  main.cpp  runtime_state.cpp  runtime_state.hpp
src/i2c/: bus_executor.cpp  bus_executor.hpp  ezo_i2c_bridge.cpp  ezo_i2c_bridge.hpp  session.cpp  session.hpp
tests/unit/: CMakeLists.txt  bus_executor_test.cpp  ezo_i2c_bridge_test.cpp  handlers_test.cpp
